gitops/env/dev/horizon-sdv-stage2/templates/gateway-keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
  labels:
    gateway: gke-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - kind: Gateway
      name: gke-gateway
      namespace: gke-gateway
      sectionName: https
  hostnames:
  - dev.horizon-sdv.scpmtk.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: dev.horizon-sdv.scpmtk.com
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /auth
    backendRefs:
    - name: keycloak-keycloakx-http
      port: 8080
