gitops/env/dev/horizon-sdv-stage2/templates/gateway-mtk-connect.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mtk-connect-route
  namespace: mtk-connect
  labels:
    gateway: gke-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - kind: Gateway
      name: gke-gateway
      namespace: gke-gateway
      sectionName: https
  hostnames:
  - dev.horizon-sdv.scpmtk.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mtk-connect/devices/ws
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: "/"
    backendRefs:
    - name: mtk-connect-websockets
      port: 8086
  - matches:
    - path:
        type: PathPrefix
        value: /mtk-connect/ws
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: "/ws"
    backendRefs:
    - name: mtk-connect-wamprouter
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /mtk-connect
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: "/"
    backendRefs:
    - name: mtk-connect-router
      port: 8081
